# JustMotd

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yml
src/: config.rs  handshake.rs  main.rs  var_int.rs
