[package]
name = "JustMotd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
bytes = "1.5.0"
base64 = "0.21.4"
log = "0.4.20"
env_logger = "0.10.0"

[[bin]]
name = "JustMotd"
path = "src/main.rs"
