[package]
name = "JustMotd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
bytes = "1.6"
base64 = "0.22"
log = "0.4.20"
env_logger = "0.10.2"

[[bin]]
name = "justmotd"
path = "src/main.rs"
